dev-2.0-sprint-2-pcafix: mtwilson-server installer fixes